--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,13 @@ matrix:
   include:
   - os: linux
     dist: trusty # Ubuntu 14.04
-    dotnet: 1.0.0-preview2-1-003177
+    dotnet: 1.0.1
     mono: none
     env: DOTNETCORE=1
     sudo: required
   - os: osx
     osx_image: xcode7.3 # macOS 10.11
-    dotnet: 1.0.0-preview2-1-003177
+    dotnet: 1.0.1
     mono: none
     env: DOTNETCORE=1
   - os: linux
