--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ os: Visual Studio 2017
 
 environment:
   global:
-    MAXMIND_BENCHMARK_DB: $(APPVEYOR_BUILD_FOLDER)/MaxMind.GeoIP2.Benchmark/GeoLite2-City.mmdb
+    MAXMIND_BENCHMARK_DB: $(APPVEYOR_BUILD_FOLDER)/MaxMind.GeoIP2.UnitTests/TestData/MaxMind-DB/test-data/GeoIP2-City-Test.mmdb
     MAXMIND_TEST_BASE_DIR: $(APPVEYOR_BUILD_FOLDER)/MaxMind.GeoIP2.UnitTests
   matrix:
     - CONFIGURATION: Debug
